[gd_scene load_steps=12 format=3 uid="uid://bn33rakab2q66"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_6v7ew"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2t3f8"]
friction = 25.0
rough = true
bounce = 0.35

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d23ss"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pc3ty"]
shading_mode = 0
albedo_color = Color(0.937255, 0.937255, 0.937255, 1)

[sub_resource type="SphereMesh" id="SphereMesh_hmic3"]
material = SubResource("StandardMaterial3D_pc3ty")
radial_segments = 6
rings = 6

[sub_resource type="Curve" id="Curve_4tmie"]
bake_resolution = 15
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.160377, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_lvt78"]
resource_name = "FLOAT"
length = 4.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Model")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 2, 1, 0, 0.2, 0, 4, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_2wh46"]
resource_name = "RESET"

[sub_resource type="Animation" id="Animation_vylt2"]
resource_name = "WOBBLE"
length = 0.5
loop_mode = 1
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Model")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.15, 0.7, 1.15, 0.25, 1, 0.7, 1.15, 0.7, 0.5, 1, 1.15, 0.7, 1.15)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Model")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, -0.15, 0, 0.25, 1, 0, 0, 0, 0.5, 1, 0, -0.15, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1t7b"]
_data = {
"FLOAT": SubResource("Animation_lvt78"),
"RESET": SubResource("Animation_2wh46"),
"WOBBLE": SubResource("Animation_vylt2")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_5mtwp"]
radius = 1.0

[node name="Item" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
collision_layer = 4
collision_mask = 7
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 2.5
physics_material_override = SubResource("PhysicsMaterial_2t3f8")
script = ExtResource("1_6v7ew")
metadata/type = "NONE"

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_d23ss")

[node name="View" type="Node3D" parent="."]

[node name="Model" type="Node3D" parent="View"]

[node name="DeathParticles" type="CPUParticles3D" parent="."]
emitting = false
amount = 16
lifetime = 2.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.75
mesh = SubResource("SphereMesh_hmic3")
emission_shape = 2
emission_sphere_radius = 0.25
direction = Vector3(0, 1, 0)
spread = 15.0
gravity = Vector3(0, 0.15, 0)
initial_velocity_max = 0.25
scale_amount_min = 0.25
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_4tmie")

[node name="PickupCD" type="Timer" parent="."]
one_shot = true

[node name="Death" type="Timer" parent="."]
one_shot = true

[node name="Afterlife" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c1t7b")
}

[node name="Neighborhood" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Hitbox" type="CollisionShape3D" parent="Neighborhood"]
shape = SubResource("SphereShape3D_5mtwp")

[connection signal="timeout" from="PickupCD" to="." method="_on_pickup_cd_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
[connection signal="timeout" from="Afterlife" to="." method="_on_afterlife_timeout"]
